Fixed overflow error

--- a/assets/styles/pages/_about.scss
+++ b/assets/styles/pages/_about.scss
@@ -302,6 +302,7 @@
         height: 200rem;
     }
     img{
+        max-width: 100%;
         object-fit: contain;
     }
 }
