--- a/assets/styles/pages/_shared.scss
+++ b/assets/styles/pages/_shared.scss
@@ -1,13 +1,13 @@
 @import '../../../node_modules/include-media/dist/_include-media.scss';
 html{
-    overflow-x: hidden;
+    
     scroll-behavior: smooth;
     font-family: 'Playfair Display',serif;
     @include media('<=tablet'){
         background-image: url('../../../public/resources/images/backgroundMobile.gif');
         background-size:contain;
         background-attachment: fixed;
-        overflow-x: hidden !important;
+       
     }
     body{
         margin:0;
